--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	  <meta name="utf-8">
   <meta name="viewport" content="width=device width, initial scale = 1">
 	<title>tarea4</title>
-	<link rel="stylesheet" type="text/css" href="mdcss/souction.css">
+	<link rel="stylesheet" href="mdcss/souction.css">
 </head>
 <body>
 	<h2>Our menu!</h1>
-<h2>Elmer Aceituno!</h2>
+<h2>Mariory Acevedo!</h2>
 <div class="fili"
 <div id="box">
 <div class="col4 coli6">
