--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	  <meta name="utf-8">
   <meta name="viewport" content="width=device width, initial scale = 1">
 	<title>tarea4</title>
-	<link rel="stylesheet" href="mdcss/souction.css">
+	<link rel="stylesheet" href="dcss/souction.css">
 </head>
 <body>
 	<h2>Our menu!</h1>
